fix white space on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -196,3 +196,8 @@
     line-height: 70px;
   }
 }
+
+
+@media (max-width: 767px){
+  html {overflow-x: hidden;}
+}
